  - [29 Aug 00] Now, when option "-d" (descendants of) is applied, the
    spouses' parents are included, except if the option "-nsp" is given.

* Geneweb compiler (gwc)
  - [27 Aug 00] Fixed bug: date e.g. "between 1300 and 1350 Julian" where
    printed by gwu as 1300..1350J but gwc expected 1300J..1350 and resulted
    in a syntax error.   

* GeneWeb data bases Transfer Program (gwtp)
  - [08 Sep 00] Added small documentation (a README file).
  - [06 Sep 00] Added ability to change the default language.
  - [22 Aug 00] Fixed bug: worked only if the CGI name was gwtp (could not
    be gwtp.cgi, for example). Fixed also the distribution: template files
    used by gwtp (3 files ending with .txt) were not installed. Fixed also
    a problem: when downloading a file, the proposed name for the file was
    not the good one (a trick was used but worked only with Netscape, not
    IE); changed the same thing for images in gwd.

* Documentation:
  - [07 Sep 00] In the directions for use, the entry "How to start with
    GeneWeb" now points to a page which explains that you can start with
    the program gwsetup instead of typing interactive commands, which seemed
    not to be clear. Changed diruse.htm (link to "start"), added initial.htm,
    added small paragraph in start.htm. Added also a paragraph in
    recover.htm, merge.htm and maint.htm. French and English versions only.
  - [03 Sep 00] In FAQ, changed the text about the question of missing
    relationship links (French and English versions only).
  - Added entries in the FAQ (French and English versions) about:
    * [03 Sep 00] the fact that sometimes, under Windows, it does not
      work at all.
    * [01 Sep 00] the fact that information in forms sometimes disappear,
    * [01 Sep 00] adding more information in family forms,
    * [31 Aug 00] short dates displaying conventions,
    * [31 Aug 00] repetition of Sosa numbers for ancestors lists,
    * [29 Aug 00] advanced request,